--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,9 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
     steps:
+      - name: path
+        run: pwd
+        
       - name: Run tests for Zad1
         run: python Zad1_tests.py
 
