--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,7 @@ on: [release, push, pull_request]
 jobs:
   tests:
     name: Tests
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: path
         run: pwd
