--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,12 +13,15 @@ jobs:
         
       - name: Run tests for Zad1
         run: python Zad1_tests.py
+        working-directory: ./Tests
 
       - name: Run tests for Zad2
         run: python Zad2_tests.py
+        working-directory: ./Tests
         
       - name: Run tests for Zad3
         run: python Zad3_tests.py
+        working-directory: ./Tests
         
         
         
