--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,13 +13,13 @@ jobs:
         run: sudo apt-get install python3.10
         
       - name: Run tests for Zad1
-        run: python Zad1_tests.py
+        run: python3.10 Zad1_tests.py
 
       - name: Run tests for Zad2
-        run: python Zad2_tests.py
+        run: python3.10 Zad2_tests.py
         
       - name: Run tests for Zad3
-        run: python Zad3_tests.py
+        run: python3.10 Zad3_tests.py
         
         
         
