--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,18 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Python3.10
-        run: |
-          sudo apt-get install python3.10
-          python --version
         
       - name: Run tests for Zad1
-        run: |
-          python Zad1_tests.py
-          python --version
+        run: python Zad1_tests.py
 
       - name: Run tests for Zad2
         run: python Zad2_tests.py
+        with:
+          python-version: '3.10'
         
       - name: Run tests for Zad3
         run: python Zad3_tests.py
